"""add title category to alert and updates to medication_log

Revision ID: 7cbf1d5f606b
Revises: 383b97d8277f
Create Date: 2026-02-14 13:26:29.474750

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '7cbf1d5f606b'
down_revision = '383b97d8277f'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('_alembic_tmp_alert')
    with op.batch_alter_table('alert', schema=None) as batch_op:
        batch_op.add_column(sa.Column('title', sa.String(length=150), nullable=True))
        batch_op.add_column(sa.Column('category', sa.String(length=30), nullable=True))
        batch_op.alter_column('message',
               existing_type=sa.VARCHAR(length=255),
               type_=sa.Text(),
               nullable=True)

    with op.batch_alter_table('medication_log', schema=None) as batch_op:
        batch_op.add_column(sa.Column('user_id', sa.Integer(), nullable=True))
        batch_op.add_column(sa.Column('log_date', sa.Date(), nullable=True))
        batch_op.add_column(sa.Column('scheduled_time', sa.Time(), nullable=False))
        batch_op.add_column(sa.Column('created_at', sa.DateTime(), nullable=True))
        batch_op.alter_column('status',
               existing_type=sa.VARCHAR(length=20),
               type_=sa.Enum('pending', 'taken', 'missed', name='medication_status'),
               existing_nullable=True)
        batch_op.alter_column('taken_at',
               existing_type=sa.DATETIME(),
               nullable=True)
        batch_op.create_index(batch_op.f('ix_medication_log_user_id'), ['user_id'], unique=False)
        batch_op.create_foreign_key('fk_medication_log_to_user_id', 'user', ['user_id'], ['user_id'], ondelete='CASCADE')

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('medication_log', schema=None) as batch_op:
        batch_op.drop_constraint('fk_medication_log_to_user_id', type_='foreignkey')
        batch_op.drop_index(batch_op.f('ix_medication_log_user_id'))
        batch_op.alter_column('taken_at',
               existing_type=sa.DATETIME(),
               nullable=False)
        batch_op.alter_column('status',
               existing_type=sa.Enum('pending', 'taken', 'missed', name='medication_status'),
               type_=sa.VARCHAR(length=20),
               existing_nullable=True)
        batch_op.drop_column('created_at')
        batch_op.drop_column('scheduled_time')
        batch_op.drop_column('log_date')
        batch_op.drop_column('user_id')

    with op.batch_alter_table('alert', schema=None) as batch_op:
        batch_op.alter_column('message',
               existing_type=sa.Text(),
               type_=sa.VARCHAR(length=255),
               nullable=False)
        batch_op.drop_column('category')
        batch_op.drop_column('title')

    op.create_table('_alembic_tmp_alert',
    sa.Column('alert_id', sa.INTEGER(), nullable=False),
    sa.Column('user_id', sa.INTEGER(), nullable=False),
    sa.Column('health_id', sa.INTEGER(), nullable=True),
    sa.Column('medication_id', sa.INTEGER(), nullable=True),
    sa.Column('medication_log_id', sa.INTEGER(), nullable=True),
    sa.Column('message', sa.TEXT(), nullable=True),
    sa.Column('created_at', sa.DATETIME(), nullable=False),
    sa.Column('severity', sa.VARCHAR(length=20), nullable=True),
    sa.Column('is_read', sa.BOOLEAN(), nullable=True),
    sa.Column('title', sa.VARCHAR(length=150), nullable=True),
    sa.Column('category', sa.VARCHAR(length=30), nullable=True),
    sa.ForeignKeyConstraint(['health_id'], ['health_data.entry_id'], ),
    sa.ForeignKeyConstraint(['medication_id'], ['medication.medication_id'], ),
    sa.ForeignKeyConstraint(['medication_log_id'], ['medication_log.log_id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('alert_id')
    )
    # ### end Alembic commands ###
